allowed-credential-providers

--- a/blueprints/inputs-with-allowed-values-sveta.yaml
+++ b/blueprints/inputs-with-allowed-values-sveta.yaml
@@ -2,6 +2,18 @@ spec_version: 2
 description: showcase for all types of inputs that support allowed values
 
 inputs:
+  credential_name_filtered:
+    type: credentials
+    allowed-credential-providers:
+    - aws
+    # - azure
+    # - vsphere
+    # - artifactory
+    - intersight
+    - redhat
+    - nexus_dashboard
+    - nvaie
+
   agent_name:
     type: agent
 
