--- a/blueprints/simple-tf-yarin.yaml
+++ b/blueprints/simple-tf-yarin.yaml
@@ -6,6 +6,10 @@ inputs:
 
 
 outputs:
+  output1:
+    value: "http://www.google1.com"
+    kind: link
+    quick: true
   output2:
     value: '{{.inputs.compute_service_name}}'
     kind: link
